- service_harddrake:
  o fix detecting modules installed in new dkms locations (/dkms and
    /dkms-binary) instead of /kernel

Version 10.27 - 3 April 2008

- drakboot:
  o stop workarounding glibc misconfiguration when listing users
    (#38116), it is now handled in MDK::Common (see #34279)
- draksplash:
  o do not write decimal values in theme config (#38271)
- finish-install:
  o configure urpmi media if network is up and no media are configured
    (#38202)

Version 10.25 - 1 April 2008

- DBus framework improvement

Version 10.24 - 1 April 2008

- drakups:
  o fix crash while removing an item (#34413)
- harddrake:
  o offer again to run drakxtv for TV cards (#39609)
- diskdrake:
  o allow relatime on ntfs-3g (#39666)
- diskdrake --fileshare:
  o do not ask to install nautilus-filesharing if already installed (#39544)

Version 10.22 - 27 March 2008

- partitioning wizard lirary: 
  o allow "Use free space" if there is an extended
  partition even if all primary partitions are used (#38804)
  (*old* bug!)
- draksplash:
  o fix reading grub conf (#39346)
- services backend:
  o handle services with "-" as default chkconfig level in more places
- mygtk2:
  o allow to create buttons with stock icons (for drakguard)
- finish-install:
  o really set the superuser password when using simplified user+root
    dialog (#39218)

Version 10.20 - 25 March 2008

- do not run main_quit if not in a main loop (eg: while loading GUI)
  but block window deletion instead (#39230)
- adduserdrake
  o force the password to be utf8 (#23273)
- diskdrake --nfs
  o ensure "nfs-common" is started (#34103)

Version 10.19 - 21 March 2008

- bootloader-config, drakboot:
  o fix device.map if it is not consistent with the system
    (eg: it says hd0 in sdb whereas it now is sda) (#39160)
- diskdrake:
  o fix setting mount point of a /dev/mdX (#39142)
    (regression introduced in 10.8)
- list gspca, ov51x-jpeg and qc-usb-messenger in webcam modules group
- harddrake: