@@ -1,3 +1,5 @@
+- time: write UTC setting in /etc/adjtime (#36522)
+
 Version 10.28 - 3 April 2008
 
 - fix computed install size in group selection (#39303)
