@@ -1,6 +1,7 @@
 - service_harddrake:
   o fix detecting modules installed in new dkms locations (/dkms and
     /dkms-binary) instead of /kernel
+- drakclock: write UTC setting in /etc/adjtime (#36522)
 
 Version 10.27 - 3 April 2008
 
